# wizardwizard

./: .gitignore  Cargo.toml  index.html  pyproject.toml  requirements.txt  vercel.json
assets/: bedroom.yaml  hallway.yaml
src/: ai.py  app.rs  game.rs  main.rs  parser.rs  ui.rs
wwizard/: main.py
